Contact page: blurry input text fix

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -61,8 +61,7 @@
   .text-zone {
     position: absolute;
     left: 10%;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 35%;
     width: 35%;
     vertical-align: middle;
     display: table-cell;
